[gd_scene load_steps=43 format=3 uid="uid://cfivro2cvucyd"]

[ext_resource type="Script" uid="uid://dj5hi7veghggu" path="res://Scripts/SomethingWicked.gd" id="1_nhhmn"]
[ext_resource type="Script" uid="uid://d0l0mwpergp4w" path="res://Scripts/area_2d.gd" id="2_ssrd1"]
[ext_resource type="Texture2D" uid="uid://c4rw3huxyfqf5" path="res://Sprites/AttackTest.png" id="3_snewb"]
[ext_resource type="Texture2D" uid="uid://6u7s2e6pnqf5" path="res://Sprites/idle.png" id="4_sassj"]
[ext_resource type="AudioStream" uid="uid://b6o2lwyfadj0m" path="res://Music/1xx/100 Continue.ogg" id="6_thbw8"]
[ext_resource type="AudioStream" uid="uid://cf2o32vs5xb6e" path="res://Sounds/Dash.wav" id="9_78dv1"]
[ext_resource type="AudioStream" uid="uid://6vj1nwyobnfo" path="res://Sounds/untitled.wav" id="10_8kprs"]
[ext_resource type="Script" uid="uid://cswi8dc6b510a" path="res://Scripts/step.gd" id="11_vvvbw"]
[ext_resource type="AudioStream" uid="uid://dtrna5wav7pvs" path="res://Sounds/click.wav" id="12_mx6xa"]
[ext_resource type="Shader" uid="uid://cie8slgga3ka4" path="res://Shaders/Flashing.gdshader" id="13_kfw33"]
[ext_resource type="AudioStream" uid="uid://dtyqf6s16v3y5" path="res://Sounds/hitHurt.wav" id="13_sn5hc"]
[ext_resource type="Texture2D" uid="uid://be5srm8cja3aa" path="res://Sprites/GroundPart.png" id="14_n4hwn"]
[ext_resource type="AudioStream" uid="uid://b6hhcruxv1j85" path="res://Sounds/Parry.wav" id="15_f56q8"]
[ext_resource type="Texture2D" uid="uid://csonpemk2p3s3" path="res://Scenes/curva.tres" id="15_fspmd"]
[ext_resource type="Texture2D" uid="uid://d2y6rctqjls4a" path="res://Sprites/RunSheet.png" id="16_g2ori"]
[ext_resource type="Script" uid="uid://cq5g7ixcdw21c" path="res://Scripts/camera_2d.gd" id="17_6gu3r"]
[ext_resource type="Script" uid="uid://k184ju54kok6" path="res://flash_timer.gd" id="17_bcvmy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2ori"]
size = Vector2(38, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6gu3r"]
size = Vector2(18, 54)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nhhmn"]
particle_flag_align_y = true
particle_flag_disable_z = true
initial_velocity_max = 79.96
gravity = Vector3(0, 98, 0)
alpha_curve = ExtResource("15_fspmd")
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bcvmy"]
shader = ExtResource("13_kfw33")
shader_parameter/Flashing = false
shader_parameter/White = false

[sub_resource type="AtlasTexture" id="AtlasTexture_267op"]
atlas = ExtResource("3_snewb")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpakl"]
atlas = ExtResource("3_snewb")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb3eb"]
atlas = ExtResource("3_snewb")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttkb8"]
atlas = ExtResource("3_snewb")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa83w"]
atlas = ExtResource("4_sassj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy5lq"]
atlas = ExtResource("4_sassj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_faugf"]
atlas = ExtResource("4_sassj")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eda38"]
atlas = ExtResource("4_sassj")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqyue"]
atlas = ExtResource("16_g2ori")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymyxm"]
atlas = ExtResource("16_g2ori")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hefpa"]
atlas = ExtResource("16_g2ori")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_npd01"]
atlas = ExtResource("16_g2ori")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqrsu"]
atlas = ExtResource("16_g2ori")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mocoe"]
atlas = ExtResource("16_g2ori")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xplnf"]
atlas = ExtResource("16_g2ori")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u15iu"]
atlas = ExtResource("16_g2ori")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efi4b"]
atlas = ExtResource("16_g2ori")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3l4k5"]
atlas = ExtResource("16_g2ori")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk3y8"]
atlas = ExtResource("16_g2ori")
region = Rect2(960, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvmyt"]
atlas = ExtResource("16_g2ori")
region = Rect2(1056, 0, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fgnqx"]
animations = [{
"frames": [{
"duration": 0.25,
"texture": SubResource("AtlasTexture_267op")
}, {
"duration": 0.25,
"texture": SubResource("AtlasTexture_qpakl")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_eb3eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttkb8")
}],
"loop": false,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa83w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy5lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_faugf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eda38")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqyue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymyxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hefpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npd01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqrsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mocoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xplnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u15iu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efi4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l4k5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk3y8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvmyt")
}],
"loop": true,
"name": &"run",
"speed": 30.0
}]

[node name="Node2D" type="Node2D"]

[node name="UwUGG" type="CharacterBody2D" parent="."]
z_index = 1
position = Vector2(320, 301)
collision_mask = 15
script = ExtResource("1_nhhmn")

[node name="Area2D" type="Area2D" parent="UwUGG"]
scale = Vector2(-1, 1)
collision_layer = 32
collision_mask = 543
monitoring = false
script = ExtResource("2_ssrd1")

[node name="HitArea" type="CollisionShape2D" parent="UwUGG/Area2D"]
position = Vector2(-19, -4.5)
shape = SubResource("RectangleShape2D_g2ori")

[node name="CollisionShape2D" type="CollisionShape2D" parent="UwUGG"]
shape = SubResource("RectangleShape2D_6gu3r")

[node name="DASHTIME" type="Timer" parent="UwUGG"]
wait_time = 0.1
one_shot = true

[node name="DashRegen" type="Timer" parent="UwUGG"]
one_shot = true

[node name="DashRegen2" type="Timer" parent="UwUGG"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="ПервыйПлеер" type="AudioStreamPlayer" parent="UwUGG"]
stream = ExtResource("6_thbw8")
bus = &"Music"

[node name="OSTimer" type="Timer" parent="UwUGG"]
wait_time = 10.67
one_shot = true

[node name="SoundPlayerMC" type="AudioStreamPlayer2D" parent="UwUGG"]
stream = ExtResource("9_78dv1")
bus = &"SFX"

[node name="Step" type="AudioStreamPlayer2D" parent="UwUGG"]
stream = ExtResource("10_8kprs")
volume_db = 24.0
bus = &"SFX"
script = ExtResource("11_vvvbw")

[node name="Whoosh" type="AudioStreamPlayer2D" parent="UwUGG"]
stream = ExtResource("12_mx6xa")
bus = &"SFX"

[node name="Hit" type="AudioStreamPlayer2D" parent="UwUGG"]
stream = ExtResource("13_sn5hc")
bus = &"SFX"

[node name="footstepart" type="GPUParticles2D" parent="UwUGG"]
texture_filter = 1
position = Vector2(0, 26)
rotation = -1.5708
emitting = false
amount = 4
texture = ExtResource("14_n4hwn")
lifetime = 0.5
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_nhhmn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UwUGG" groups=["Flashable"]]
material = SubResource("ShaderMaterial_bcvmy")
position = Vector2(1, -5)
sprite_frames = SubResource("SpriteFrames_fgnqx")
speed_scale = 0.5

[node name="Parry" type="AudioStreamPlayer" parent="UwUGG"]
stream = ExtResource("15_f56q8")
bus = &"SFX"

[node name="FlashTimer" type="Timer" parent="UwUGG"]
script = ExtResource("17_bcvmy")

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 2
position = Vector2(320, 180)
script = ExtResource("17_6gu3r")

[node name="Panel" type="Panel" parent="Camera2D"]
visible = false
offset_left = -321.0
offset_top = 114.0
offset_right = 319.0
offset_bottom = 180.0

[node name="Label" type="Label" parent="Camera2D/Panel"]
layout_mode = 0
offset_top = 21.0
offset_right = 640.0
offset_bottom = 44.0
text = "Не пытайся бежать."
horizontal_alignment = 1

[connection signal="body_entered" from="UwUGG/Area2D" to="UwUGG/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="UwUGG/Area2D" to="UwUGG/Area2D" method="_on_body_exited"]
[connection signal="timeout" from="UwUGG/DASHTIME" to="UwUGG" method="_on_dashtime_timeout"]
[connection signal="timeout" from="UwUGG/DashRegen" to="UwUGG" method="_on_dash_regen_timeout"]
[connection signal="timeout" from="UwUGG/DashRegen2" to="UwUGG" method="_on_dash_regen_2_timeout"]
[connection signal="finished" from="UwUGG/Step" to="UwUGG/Step" method="_on_finished"]
[connection signal="animation_finished" from="UwUGG/AnimatedSprite2D" to="UwUGG/Area2D" method="_on_animated_sprite_2d_animation_finished"]
